# temporal-wiki-project

./: .gitignore  README.md  __init__.py  environment.yml  example_dataset.json  main.py  pants.toml  setup.py
.github/workflows/: ci_test.yaml  deploy-ergodiff.yaml
.pants.d/run-tracker/pants_run_2022_11_01_01_41_00_160_d5bd1816d9ef4ef5a8d2f1020eb6b824/: logs
.pants.d/run-tracker/pants_run_2022_11_01_01_44_37_515_76d42f20e8c649c9af0e03a84291c7af/: logs
.pants.d/run-tracker/pants_run_2022_11_01_01_55_05_182_e1c6794dd93e48209d1ff0f5c0663d8e/: logs
.pants.d/run-tracker/pants_run_2022_11_01_02_47_06_795_309c9874a35f42f4a7febe350f9f4592/: logs
.pids/d4ab91b448cc/pantsd/: fingerprint  process_name
diff_module/: __init__.py
ergodiff/: pyproject.toml
ergodiff/ergodiff/: __init__.py  inner_diff.py  outer_diff.py  postprocess.py  preprocess.py
ergodiff/tests/: test_basic_diff.py  test_inner_diff.py  test_reconstruct.py
grimm/: pyproject.toml
grimm/tests/: link_parsing.py  test_link_parsing.py  test_syntax_cleaning.py
history-parser-v1/: main.py
history-parser-v1/magicwords/: __init__.py
history_model/: __init__.py
history_parser/: main.py
history_parser/syntax_cleanner/: __init__.py  cleanner_core.py
history_parser_v1/: history.py  main.py  syntax_cleanning.py
history_parser_v1/diff_module/: preprocess.py
paraphrasing_dataset/: prps.json  pyproject.toml
paraphrasing_dataset/paraphrasing_dataset/: __main__.py  utils.py
project/: __init__.py
project/grimm/: BUILD
project/tests/: entire_clean.py  link_parsing.py
python/: BUILD  main.py
python/ergodiff/: postprocess.py
python/tests/: diff_module.py
syntax_cleanner/: __init__.py
twikidata/: pyproject.toml
twikidata/twikidata/: __init__.py  models.py
twikireader/: pyproject.toml
twikireader/twikireader/: __init__.py  structure.py
