[tool.poetry]
name = "paraphrasing_dataset"
version = "0.1.1"
description = ""
authors = ["Lingxi Li <lilingxi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
twikireader = "^0.1.0"

[tool.poetry.scripts]
prpsdata = "paraphrasing_dataset.__main__:main"

[tool.poetry.group.dev.dependencies]
twikireader = {path = "../twikireader"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
