[tool.poetry]
name = "twikidata"
version = "0.1.0"
description = ""
authors = ["Lingxi Li <lilingxi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"
ergodiff = {path = "../ergodiff"}
grimm = {path = "../grimm"}


[tool.poetry.scripts]
main = "twikidata:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
