[tool.poetry]
name = "twikireader"
version = "0.1.0"
description = ""
authors = ["Lingxi Li <lilingxi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.13.0"
grimm = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
grimm = {path = "../grimm"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
